# video_text_extractor

./: .gitignore  CONTEXT.md  README.md  install_gpu.py  pyproject.toml
config/: default.yaml  schemas.py
src/video_ocr/: __init__.py  __main__.py  cli.py
src/video_ocr/core/: __init__.py  deduplicator.py  frame_extractor.py  ocr_engine.py  output_formatter.py  parallel_ocr.py  transcript_parser.py
src/video_ocr/engines/: __init__.py  base.py  doctr_engine.py  easyocr_engine.py  paddleocr_engine.py  surya_engine.py  tesseract_engine.py  trocr_engine.py
src/video_ocr/utils/: __init__.py  image_utils.py  logging_config.py  similarity.py
src/video_ocr/web/: __init__.py  app.py
src/video_ocr/web/templates/: index.html
tests/: __init__.py  conftest.py  test_deduplicator.py  test_frame_extractor.py  test_output_formatter.py  test_similarity.py  test_transcript_parser.py
